--- a/aboutus.html
+++ b/aboutus.html
@@ -183,10 +183,18 @@ Fax: (760) 471-6635</p>
   <div class="clr"></div>
 </div>
 <div class="footer">
-  <div class="footer_resize"><a href="index.html"><img class="pull-left" src="images/logo.png" alt="picture" width="200" height="170" border="0" /></a>
-    <p class="leftt">© Copyright K & M Electrics Services, Inc. All Rights Reserved<br />
-      480 Enterprise Street, San Marcos, CA 92078<br />
-		License # C-10 #818947</p>
+  <div class="footer_resize"><a href="index.html"><img class="pull-left" src="images/logo.png" alt="picture" width="250" height="210" border="0" /></a>
+    <p class="leftt">.© Copyright K & M Electrics Services, Inc. All Rights Reserved
+          Orlando FL, 32818 
+          License EC13006281<br />
+                  <br />              
+          K & M ELECTRICS 1 INC<br /> 
+           Location: Orlando FL, 32818<br />   
+          Phone 407.468.2550 <br /> 
+          Fax 407 291-2569 <br /> 
+          Email: k_melectrics1@aol.com <br /> 
+          Website: www.kandmelectrics1inc.com <br />  
+          License EC13006281 </p>
     <div class="clr"></div>
   </div>
   <div class="clr"></div>
