--- a/ourservices.html
+++ b/ourservices.html
@@ -104,7 +104,7 @@ $(document).ready(function() {
   <div class="body_resize">
     <div class="body">
       <div class="left">
-        <h2>We help our clients meet their goals to achieve maximum performance with their networks.</h2>
+        <h2>Servicing our clients with the best quality work at the most affordable price.</h2>
         <div class="rotator">
 		  <ul>
 		    <li><img src="images/underground electrical about page or services.jpeg" alt="picture" width="350" height="220"/></li>
@@ -112,36 +112,41 @@ $(document).ready(function() {
 		    <li><img src="images/second image home page.jpg" alt="picture" width="350" height="220" /></li>
 		  </ul>
 		</div>
-        <p>K & M Electrics 1, Inc expertise are in commercial and Industrial structures, control circuits, custom designs circuits, generators, service upgrades, educational, medical, religious, entertainment and transit facilities. We also specializes in LED retrofit services, and facilities maintenance programs.Our experience in controls has led us into power plants controls, industrial automation, and manufacturing plants.</p>
+        <p>K & M Electrics 1, Inc expertise are in commercial and Industrial structures, control circuits, 
+ 			custom designs circuits, generators, service upgrades, educational, medical, religious,
+ 			entertainment and transit facilities. We also specializes in LED retrofit services, and
+ 			facilities maintenance programs.Our experience in controls has led us into power plants 
+			controls, industrial automation, and manufacturing plants.
+			</p>
 
 
 
-        <p><strong>If Telecommunications service or quote is needed, please contact:</strong></p>
+        <p><strong>
+			IF ANY ELECTRICAL SERVICE OR QUOTE IS NEEDED PLEASE SEE OUR <a href="contactus.html">CONTACT US</a> PAGE.
+			OR EMAIL US BELOW.</strong></p>
 
 				<p>
 				<table border="0" cellpadding="0" cellspacing="0">
 					<tr>
 						<td valign="top">
-							<strong>Name</strong><br />
-							111-111-111<br />
-							<a href="#">Dummy@K & M Electrics.com</a>
+							<strong>MIGUEL DONASTORG JR</strong><br />
+							
+							<a href="#">mdonastorg@kandmelectrics1inc@aol.comc@aol.com</a>
 						</td>
 						<td style="padding-left: 20px;">
 						or
 						</td>
 						<td valign="top" style="padding-left: 20px;">
-							<strong>Name</strong><br />
-								RCDD / ESS / OSP<br />
-							111-111-111<br />
-							<a href="#">Dummy@K & M Electrics.com</a>
+							<strong>IHYUNDAI DONASTORG</strong><br />
+							<a href="#">idonastorg@kandmelectrics1inc@aol.com</a>
 						</td>
 						<td style="padding-left: 20px;">
 						or
 						</td>
 						<td valign="top" style="padding-left: 20px;">
-							<strong>Name</strong><br />
+							<strong>MARITZIA DONASTORG</strong><br />
 							111-111-111<br />
-							<a href="#">Dummy@K & M Electrics.com</a>
+							<a href="#">madonastorg@kandmelectrics1in</a>
 						</td>
 					</tr>
 				</table>
