--- a/aboutus.html
+++ b/aboutus.html
@@ -118,22 +118,21 @@ $(document).ready(function() {
         <div style="clear:both;"></div>
 
         <p>K & M Electrics 1 Inc, conducts our business with the highest level of integrity, safety, performance and productivity. Consistently focus on the highest quality production by committing to excellence at the lowest possible cost.</p>
-				<p><strong>If Electrics design build / new construction service or quote is needed,please contact:</strong></p>
+				<p><strong>IF ANY ELECTRICAL SERVICE OR QUOTE IS NEEDED PLEASE SEE OUR <a href="contactus.html">CONTACT US</a> PAGE.
+			OR EMAIL US BELOW</strong></p>
 				<p>
 				<table border="0" cellpadding="0" cellspacing="0">
 					<tr>
 						<td>
-							<strong>Name</strong><br />
-							111-111-111<br />
-							<a href="#">Dummy@K & M Electrics.com</a>
+							<strong>MIGUEL DONASTORG JR</strong><br />
+							<a href="#">mdonastorg@kandmelectrics1inc@aol.comc@aol.com</a>
 						</td>
 						<td style="padding-left: 35px;">
 						or
 						</td>
 						<td style="padding-left: 35px;">
-							<strong>Name</strong><br />
-							111-111-111<br />
-							<a href="#">Dummy@K & M Electrics.com</a>
+							<strong>IHYUNDAI DONASTORG</strong><br />
+							<a href="#">idonastorg@kandmelectrics1inc@aol.com</a>
 						</td>
 					</tr>
 				</table>
