--- a/contactus.html
+++ b/contactus.html
@@ -103,75 +103,53 @@ $(document).ready(function() {
   <div class="body_resize">
     <div class="body">
       <div class="left">
-        <h2>K & M Electrics Services Inc.</h2>
+        <h2>K & M ELECTRICS 1, INC</h2>
         <div class="rotator">
 		  <ul>
 		    <li><img src="images/Drawing rolls with electrical instruments.jpg" alt="picture" width="350" height="220"/></li>
 		    <li><img src="images/First image for front home page.jpg" alt="picture" width="350" height="220"/></li>
 		  </ul>
 		</div>
-        <p><strong>K & M Electrics Services Inc.</strong><br />
-								480 Enterprise Street<br />
-								San Marcos, CA 92078<br />
-								Phone: 111-111-111<br />
-								Fax: (760) 471-6635<br />
-								License C-10  #818947 <br />
+        <p><strong>K & M ELECTRICS 1 INC</strong><br />
+								Location: Orlando FL, 32818 <br />
+								Phone 407.468.2550 <br />
+								 Fax 407 291-2569 <br />
+								Email: k_melectrics1@aol.com<br />
+								Website: www.kandmelectrics1inc.com ;<br />
+								License EC13006281<br />
 							</p>
 
+
+ 
+ 
+
+ 
+ 
+ 
+
 <br />
-							<p>Located in San Marcos, California and incorporated in 2002. K & M Electrics Services Inc. is a full service Electrical and Communications contractor servicing the Southern California region.</p>
-        <p>From a simple service call to a complete design build project, K & M Electrics offers exceptional service and cost effective solutions to it's clients. <a href="ourservices.html">Learn more about our services »</a></p>
+							<p>Located in the Central part of Orlando FL, and incorporated in 2002. K & M Electrics Services Inc. is a full service Electrical Contracting Company servicing all of Southern Florida. </p>
+        <p>Consistently focused on the highest-quality production by committing to excellence at the lowest possible cost. <a href="ourservices.html">Learn more about our services »</a></p>
       </div>
       <div class="right">
         <h2 style="padding-bottom:10px;">Contacts:</h2>
 
-							<p style="line-height:14px;"><strong>Name</strong><br />
-								President - Partner<br />
-								<a style="line-height:14px;" href="#">Dummy@K & M Electrics.com</a>
+							<p style="line-height:14px;"><strong>MIGUEL DONASTORG JR</strong><br />
+								<a style="line-height:14px;" href="#">mdonastorg@kandmelectrics1inc@aol.comc@aol.com</a>
 							</p>
 
 							<br />
 
-							<p style="line-height:14px;"><strong>Name</strong><br />
-								Treasurer - Partner<br />
-								<a style="line-height:14px;" href="#">Dummy@K & M Electrics.com</a>
+							<p style="line-height:14px;"><strong>IHYUNDAI DONASTORG</strong><br />
+								<a style="line-height:14px;" href="#">idonastorg@kandmelectrics1inc@aol.com</a>
 							</p>
 
 							<br />
 
-							<p style="line-height:14px;"><strong>Name</strong><br />
-								Secretary - Partner<br />
-								<a style="line-height:14px;" href="#">Dummy@K & M Electrics.com</a>
+							<p style="line-height:14px;"><strong>MARITZIA DONASTORG</strong><br />
+								<a style="line-height:14px;" href="#">madonastorg@kandmelectrics1in</a>
 							</p>
 
-							<br />
-
-							<p style="line-height:14px;">
-								<strong>Name</strong><br />
-								AP/AR<br />
-								<a style="line-height:14px;" href="#">Dummy@K & M Electrics.com</a>
-							</p>
-
-							<br />
-
-							<p style="line-height:14px;"><strong>Name</strong><br />
-								HR / Payroll<br />
-								<a style="line-height:14px;" href="#">Dummy@K & M Electrics.com</a>
-							</p>
-
-							<br />
-
-							<p style="line-height:14px;"><strong>Name</strong><br />
-								RCDD / ESS / OSP<br />
-								<a style="line-height:14px;" href="#">Dummy@K & M Electrics.com</a>
-							</p>
-
-							<br />
-
-							<p style="line-height:14px;"><strong>Name</strong><br />
-								Project Manager<br />
-								<a style="line-height:14px;" href="#">Dummy@K & M Electrics.com</a>
-							</p>
 
 							<br />
       </div>
