--- a/ourmission.html
+++ b/ourmission.html
@@ -104,35 +104,33 @@ $(document).ready(function() {
   <div class="body_resize">
     <div class="body">
       <div class="left">
-        <h2>Every K & M Electrics service technician is a fully trained professional.</h2>
+        <h2>QUALITY AND GREEN TECHNOLOGY THAT'S OUR GLOBAL TRADEMARK.</h2>
         <div class="rotator">
 		  <ul>
-		    <li><img src="images/fifth image home page.jpg" alt="picture" width="350" height="220"/></li>
+		    <li><img src="images/OUR MISSION.jpg" alt="picture" width="350" height="220"/></li>
 		    <li><img src="images/3rd image flourescent bulb .jpg" alt="picture" width="350" height="220"/></li>
 		  </ul>
 		</div>
-        <p>K & M Electrics 1, Inc is dedicated in providing the best quality performance to all our customers we service in our community with loyalty, honesty and integrity</p>
+        <p>K & M ELECTRICS 1, INC Mission is in building and designing one of the highest quality production in green technology and safety for our environmental wellness. THAT'S OUR GLOBAL TRADEMARK.</p>
 
 
-        <p><strong>If electrical service or a quote is needed please contact:</strong></p>
+        <p><strong>IF ANY ELECTRICAL SERVICE OR QUOTE IS NEEDED PLEASE SEE OUR <a href="contactus.html">CONTACT US</a> PAGE.
+			OR EMAIL US BELOW</strong></p>
 
 				<p>
 				<table border="0" cellpadding="0" cellspacing="0">
 					<tr>
 						<td>
-							<strong>Name</strong><br />
-							111-111-111<br />
-							<a href="#">Email</a>
+							<strong>MIGUEL DONASTORG JR</strong><br />
+							<a href="#">mdonastorg@kandmelectrics1inc@aol.comc@aol.com</a>
 						</td>
 						<td style="padding-left: 35px;">
-							<strong>Name</strong><br />
-							111-111-111<br />
-							<a href="#">Email</a>
+							<strong>IHYUNDAI DONASTORG</strong><br />
+							<a href="#">idonastorg@kandmelectrics1inc@aol.com</a>
 						</td>
 						<td style="padding-left: 35px;">
-							<strong>Name</strong><br />
-							111-111-111<br />
-							<a href="#">Email</a>
+							<strong>MARITZIA DONASTORG</strong><br />
+							<a href="#">madonastorg@kandmelectrics1in</a>
 						</td>
 					</tr>
 				</table>
