--- a/index.html
+++ b/index.html
@@ -71,34 +71,38 @@
       <div class="left">
         <h2>Welcome to K & M Electrics 1, Inc.<br />
           <span>&nbsp;</span></h2>
-
-		<p>K & M Electrics 1, Inc is located in Orlando, FL and incorporated in 2002. We are a family-orientated company that is committed in delivering the highest quality service  performance, professionalism and dependability to all of our customers.  Fortified with an electrical skill-set handed down from father to son for five generations, coupled with the book smarts of military education and modern practices. K & M Electrics 1, Inc expertise are in commercial and Industrial structures, control circuits, custom designs circuits, generators, service upgrades, educational, medical, religious, entertainment and transit facilities. We also specializes in LED retrofit services, and facilities maintenance programs.Our experience in controls has led us into power plants controls, industrial automation, and manufacturing plants.</p>
-
-		<p>K & M Electrics 1 Inc, conducts our business with the highest level of integrity, safety, performance and productivity. Consistently focus on the highest quality production by committing to excellence at the lowest possible cost.</p>
+					<p>K & M Electrics 1, Inc is located in Orlando, FL and incorporated in 2002. We are a family-orientated company that is committed in delivering the highest quality service  performance, professionalism and dependability to all of our customers.  Fortified with an electrical skill-set handed down from father to son for five generations, coupled with the book smarts of military education and modern practices. K & M Electrics 1, Inc expertise are in commercial and Industrial structures, control circuits, custom designs circuits, generators, service upgrades, educational, medical, religious, entertainment and transit facilities. We also specializes in LED retrofit services, and facilities maintenance programs.Our experience in controls has led us into power plants controls, industrial automation, and manufacturing plants.</p>
+					<p>K & M Electrics 1 Inc, conducts our business with the highest level of integrity, safety, performance and productivity. Consistently focus on the highest quality production by committing to excellence at the lowest possible cost.</p>
         <Br />
-
-		<div class="FBG2">
-			<div class="FBG2_resize">
-				<div class="left">
-				  <h2>Quality Work</h2>
-				  <p>Every K & M Electrics service technician is a fully trained professional that can help solve the most challenging of electrical issues in a timely fashion.</p>
-				</div>
-				<div class="left">
-				  <h2>Customer Satisfaction</h2>
-				  <p>K & M Electrics Service Department has a fleet of fully stocked trucks to handle almost any service call that may arise.</p>
-				</div>
-				<div class="contact">
-				  <h2>Contact Us</h2>
-				  <p>K & M Electrics Services Inc.<br />
-					480 Enterprise Street<br />
-					San Marcos, CA 92078<br />
-					Phone: 111-111-111<br />
-					Fax: (760) 471-6635</p>
-				</div>
+				<div class="FBG2">
+					<div class="FBG2_resize">
+						<div class="left">
+				  		<h2>Quality Work</h2>
+				  		<p>Projects completion in a timely fashion <br>
+							Highest - Quality production <br>
+							Dependability & meet deadlines</p>
+						</div>
+						<div class="left" style="width:163">
+				  		<h2>Customer Satisfaction</h2>
+				  		<p>Knowledgeable & Attentive <br>
+							Fully Trained & Certified Technicians <br>
+							Offers solutions to your problem<br>
+							Integrity & Respect</p>
+						</div>
+						<div class="contact" style="width:213px">
+				  		<h2>Contact Us</h2>
+				  		<p>K & M ELECTRICS 1 INC <br>
+ 							Location: Orlando FL, 32818 <br>
+ 							Phone 407.468.2550 <br>
+ 							Fax 407 291-2569 <br>
+ 							Email: k_melectrics1@aol.com <br>
+ 							Website: www.kandmelectrics1inc.com<br>
+ 							License EC13006281</p>
+						</div>
+						<div class="clr"></div>
+					</div>
 				<div class="clr"></div>
 			</div>
-			<div class="clr"></div>
-		</div>
 
 		<!--
         <h2>Featured Clients<br />
@@ -170,15 +174,15 @@
 <div class="footer">
   <div class="footer_resize"><a href="index.html"><img class="pull-left" src="images/logo.png" alt="picture" width="250" height="210" border="0" /></a>
     <p class="leftt">.© Copyright K & M Electrics Services, Inc. All Rights Reserved
-          Orlando FL, 32818 
+          Orlando FL, 32818
           License EC13006281<br />
-                  <br />              
-          K & M ELECTRICS 1 INC<br /> 
-           Location: Orlando FL, 32818<br />   
-          Phone 407.468.2550 <br /> 
-          Fax 407 291-2569 <br /> 
-          Email: k_melectrics1@aol.com <br /> 
-          Website: www.kandmelectrics1inc.com <br />  
+                  <br />
+          K & M ELECTRICS 1 INC<br />
+           Location: Orlando FL, 32818<br />
+          Phone 407.468.2550 <br />
+          Fax 407 291-2569 <br />
+          Email: k_melectrics1@aol.com <br />
+          Website: www.kandmelectrics1inc.com <br />
           License EC13006281 </p>
     <div class="clr"></div>
   </div>
