--- a/ourmission.html
+++ b/ourmission.html
@@ -153,22 +153,29 @@ $(document).ready(function() {
 </div>
 <div class="FBG">
   <div class="FBG_resize">
-    <div class="left">
-      <h2>Quality Work</h2>
-      <p>Every K & M Electrics service technician is a fully trained professional that can help solve the most challenging of electrical issues in a timely fashion.</p>
-    </div>
-    <div class="left">
-      <h2>Customer Satisfaction</h2>
-      <p>K & M Electrics Service Department has a fleet of fully stocked trucks to handle almost any service call that may arise.</p>
-    </div>
-    <div class="right">
-       <h2>Contact Us</h2>
-      <p>K & M Electrics Services Inc.<br />
-480 Enterprise Street<br />
-San Marcos, CA 92078<br />
-Phone: 111-111-111<br />
-Fax: (760) 471-6635</p>
-    </div>
+		<div class="left" style="width:161">
+			<h2>Quality Work</h2>
+			<p>Projects completion in a timely fashion <br>
+			Highest - Quality production <br>
+			Dependability & meet deadlines</p>
+		</div>
+		<div class="left">
+			<h2>Customer Satisfaction</h2>
+			<p>Knowledgeable & Attentive <br>
+			Fully Trained & Certified Technicians <br>
+			Offers solutions to your problem<br>
+			Integrity & Respect</p>
+		</div>
+		<div  class="left" style="width:271px">
+			<h2>Contact Us</h2>
+			<p>K & M ELECTRICS 1 INC <br>
+			Location: Orlando FL, 32818 <br>
+			Phone 407.468.2550 <br>
+			Fax 407 291-2569 <br>
+			Email: k_melectrics1@aol.com <br>
+			Website: www.kandmelectrics1inc.com<br>
+			License EC13006281</p>
+		</div>
 	<!--
     <div class="right">
       <h2>What They Say</h2>
@@ -184,15 +191,15 @@ Fax: (760) 471-6635</p>
 <div class="footer">
   <div class="footer_resize"><a href="index.html"><img class="pull-left" src="images/logo.png" alt="picture" width="250" height="210" border="0" /></a>
     <p class="leftt">.© Copyright K & M Electrics Services, Inc. All Rights Reserved
-          Orlando FL, 32818 
+          Orlando FL, 32818
           License EC13006281<br />
-                  <br />              
-          K & M ELECTRICS 1 INC<br /> 
-           Location: Orlando FL, 32818<br />   
-          Phone 407.468.2550 <br /> 
-          Fax 407 291-2569 <br /> 
-          Email: k_melectrics1@aol.com <br /> 
-          Website: www.kandmelectrics1inc.com <br />  
+                  <br />
+          K & M ELECTRICS 1 INC<br />
+           Location: Orlando FL, 32818<br />
+          Phone 407.468.2550 <br />
+          Fax 407 291-2569 <br />
+          Email: k_melectrics1@aol.com <br />
+          Website: www.kandmelectrics1inc.com <br />
           License EC13006281 </p>
     <div class="clr"></div>
   </div>
