--- a/ourmission.html
+++ b/ourmission.html
@@ -77,7 +77,7 @@ $(document).ready(function() {
 <div class="main">
   <div class="blok_header">
     <div class="header">
-      <a href="index.html"><img class="pull-left" src="images/Source.png" alt="picture" width="220" height="180" border="0" /></a>
+      <a href="index.html"><img class="pull-left" src="images/source logo lightened.png" alt="picture" width="220" height="180" border="0" /></a>
       <div class="menu">
 				<ul>
           <li><a href="index.html"><span>Home</span></a></li>
@@ -111,26 +111,23 @@ $(document).ready(function() {
 		    <li><img src="images/3rd image flourescent bulb .jpg" alt="picture" width="350" height="220"/></li>
 		  </ul>
 		</div>
-        <p>K & M ELECTRICS 1, INC Mission is in building and designing one of the highest quality production in green technology and safety for our environmental wellness. THAT'S OUR GLOBAL TRADEMARK.</p>
+        <p>
+			<b>K & M ELECTRICS 1, INC</b> Mission is in building and designing one of the highest quality production in green technology and safety for our environmental wellness.THAT'S OUR GLOBAL TRADEMARK.</p>
 
 
-        <p><strong>IF ANY ELECTRICAL SERVICE OR QUOTE IS NEEDED PLEASE SEE OUR <a href="contactus.html">CONTACT US</a> PAGE.
-			OR EMAIL US BELOW</strong></p>
+        <p>IF ANY ELECTRICAL SERVICE OR QUOTE IS NEEDED PLEASE SEE OUR <a href="contactus.html">CONTACT US</a> PAGE.
+			OR EMAIL US BELOW</p>
 
 				<p>
 				<table border="0" cellpadding="0" cellspacing="0">
 					<tr>
 						<td>
 							<strong>MIGUEL DONASTORG JR</strong><br />
-							<a href="#">mdonastorg@kandmelectrics1inc@aol.comc@aol.com</a>
+							<a href="#">mdonastorg@kandmelectrics1inc.com</a>
 						</td>
 						<td style="padding-left: 35px;">
 							<strong>IHYUNDAI DONASTORG</strong><br />
-							<a href="#">idonastorg@kandmelectrics1inc@aol.com</a>
-						</td>
-						<td style="padding-left: 35px;">
-							<strong>MARITZIA DONASTORG</strong><br />
-							<a href="#">madonastorg@kandmelectrics1in</a>
+							<a href="#">idonastorg@kandmelectrics1inc.com</a>
 						</td>
 					</tr>
 				</table>
@@ -190,9 +187,9 @@ $(document).ready(function() {
 </div>
 <div class="footer">
   <div class="footer_resize"><a href="index.html"><img class="pull-left" src="images/logo.png" alt="picture" width="250" height="210" border="0" /></a>
-    <p class="leftt">.© Copyright K & M Electrics Services, Inc. All Rights Reserved
-          Orlando FL, 32818
-          License EC13006281<br />
+    <p class="leftt">Copyright K & M Electrics Services, Inc. All Rights Reserved<br />
+            Orlando FL, 32818<br />
+            License # EC13012381<br />
                   <br />
           K & M ELECTRICS 1 INC<br />
            Location: Orlando FL, 32818<br />
