--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="main">
   <div class="blok_header">
     <div class="header">
-      <a href="index.html"><img class="pull-left" src="images/Source.png" alt="picture" width="220" height="180" border="0" /></a>
+      <a href="index.html"><img class="pull-left" src="images/source logo lightened.png" alt="picture" width="220" height="180" border="0" /></a>
       <div class="menu">
 				<ul>
           <li><a href="#" class="active"><span>Home</span></a></li>
@@ -176,9 +176,9 @@
 
 <div class="footer">
   <div class="footer_resize"><a href="index.html"><img class="pull-left" src="images/logo.png" alt="picture" width="250" height="210" border="0" /></a>
-    <p class="leftt">.© Copyright K & M Electrics Services, Inc. All Rights Reserved
-          Orlando FL, 32818
-          License EC13006281<br />
+    <p class="leftt">Copyright K & M Electrics Services, Inc. All Rights Reserved<br />
+            Orlando FL, 32818<br />
+            License # EC13012381<br />
                   <br />
           K & M ELECTRICS 1 INC<br />
            Location: Orlando FL, 32818<br />
