--- a/ourservices.html
+++ b/ourservices.html
@@ -77,7 +77,7 @@ $(document).ready(function() {
 <div class="main">
   <div class="blok_header">
     <div class="header">
-    <a href="index.html"><img class="pull-left" src="images/Source.png" alt="picture" width="220" height="180" border="0" /></a>
+    <a href="index.html"><img class="pull-left" src="images/source logo lightened.png" alt="picture" width="220" height="180" border="0" /></a>
       <div class="menu">
 				<ul>
           <li><a href="index.html"><span>Home</span></a></li>
@@ -121,9 +121,9 @@ $(document).ready(function() {
 
 
 
-        <p><strong>
+        <p>
 			IF ANY ELECTRICAL SERVICE OR QUOTE IS NEEDED PLEASE SEE OUR <a href="contactus.html">CONTACT US</a> PAGE.
-			OR EMAIL US BELOW.</strong></p>
+			OR EMAIL US BELOW.</p>
 
 				<p>
 				<table border="0" cellpadding="0" cellspacing="0">
@@ -131,21 +131,11 @@ $(document).ready(function() {
 						<td valign="top">
 							<strong>MIGUEL DONASTORG JR</strong><br />
 
-							<a href="#">mdonastorg@kandmelectrics1inc@aol.comc@aol.com</a>
-						</td>
-						<td style="padding-left: 20px;">
-						or
+							<a href="#">mdonastorg@kandmelectrics1inc.com</a>
 						</td>
 						<td valign="top" style="padding-left: 20px;">
 							<strong>IHYUNDAI DONASTORG</strong><br />
-							<a href="#">idonastorg@kandmelectrics1inc@aol.com</a>
-						</td>
-						<td style="padding-left: 20px;">
-						or
-						</td>
-						<td valign="top" style="padding-left: 20px;">
-							<strong>MARITZIA DONASTORG</strong><br />
-							<a href="#">madonastorg@kandmelectrics1in</a>
+							<a href="#">idonastorg@kandmelectrics1inc.com</a>
 						</td>
 					</tr>
 				</table>
@@ -158,6 +148,22 @@ $(document).ready(function() {
             &middot; Commercial<br />
             &middot; Secular<br />
             &middot; Educational</p>
+
+
+        <h2>Our Services:</h2>
+        <p style="width : 210px;">&middot; Commercial<br />
+            &middot; Industrial structures<br />
+            &middot; Control circuits <br />
+            &middot; Custom design circuits<br />
+            &middot; Generators<br />
+            &middot; Service upgrades<br />
+            &middot; Educational<br />
+            &middot; Medical<br />
+            &middot; Religious <br />
+            &middot; LED retrofit services<br />
+            &middot; Entertainment and Transit facilities<br />
+            &middot; Facilities maintenance programs</p>
+  
       </div>
         <div style="clear:both;"></div>
       <div class="clr"></div>
@@ -204,9 +210,9 @@ $(document).ready(function() {
 </div>
 <div class="footer">
   <div class="footer_resize"><a href="index.html"><img class="pull-left" src="images/logo.png" alt="picture" width="250" height="210" border="0" /></a>
-    <p class="leftt">.© Copyright K & M Electrics Services, Inc. All Rights Reserved
-          Orlando FL, 32818
-          License EC13006281<br />
+    <p class="leftt">Copyright K & M Electrics Services, Inc. All Rights Reserved<br />
+            Orlando FL, 32818<br />
+            License # EC13012381<br />
                   <br />
           K & M ELECTRICS 1 INC<br />
            Location: Orlando FL, 32818<br />
