--- a/aboutus.html
+++ b/aboutus.html
@@ -104,7 +104,7 @@ $(document).ready(function() {
   <div class="body_resize">
     <div class="body">
       <div class="left">
-        <h2>Our track record in the industry is that of quality.</h2>
+        <h2>INTEGRITY SAFETY & THE HIGHEST QUALITY PRODUCTION. JUST LIKE IT IS ON THE HOMEPAGE.</h2>
     		<div class="rotator">
 		  		<ul>
 		    		<li><img src="images/underground electrical about page or services.jpeg" alt="pic4" width="350" height="220"/></li>
@@ -113,26 +113,29 @@ $(document).ready(function() {
 		  		</ul>
 				</div>
 
-        <p>K & M Electrics 1, Inc is located in Orlando, FL and incorporated in 2002. We are a family-orientated company that is committed in delivering the highest quality service  performance, professionalism and dependability to all of our customers.  Fortified with an electrical skill-set handed down from father to son for five generations, coupled with the book smarts of military education and modern practices. K & M Electrics 1, Inc expertise are in commercial and Industrial structures, control circuits, custom designs circuits, generators, service upgrades, educational, medical, religious, entertainment and transit facilities. We also specializes in LED retrofit services, and facilities maintenance programs.Our experience in controls has led us into power plants controls, industrial automation, and manufacturing plants.</p>
+        <p>K & M Electrics 1, Inc expertise are in commercial and Industrial structures, control circuits,
+ custom designs circuits, generators, service upgrades, educational, medical, religious,
+ entertainment and transit facilities. We also specializes in LED retrofit services, and
+ facilities maintenance programs.Our experience in controls has led us into power plants
+ controls, industrial automation, and manufacturing plants.</p>
 
         <div style="clear:both;"></div>
 
-        <p>K & M Electrics 1 Inc, conducts our business with the highest level of integrity, safety, performance and productivity. Consistently focus on the highest quality production by committing to excellence at the lowest possible cost.</p>
-				<p><strong>IF ANY ELECTRICAL SERVICE OR QUOTE IS NEEDED PLEASE SEE OUR <a href="contactus.html">CONTACT US</a> PAGE.
-			OR EMAIL US BELOW</strong></p>
+				<p>IF ANY ELECTRICAL SERVICE OR QUOTE IS NEEDED PLEASE SEE OUR <a href="contactus.html">CONTACT US</a> PAGE.
+			OR EMAIL US BELOW</p>
 				<p>
 				<table border="0" cellpadding="0" cellspacing="0">
 					<tr>
 						<td>
 							<strong>MIGUEL DONASTORG JR</strong><br />
-							<a href="#">mdonastorg@kandmelectrics1inc@aol.comc@aol.com</a>
+							<a href="#">mdonastorg@kandmelectrics1inc.com</a>
 						</td>
 						<td style="padding-left: 35px;">
 						or
 						</td>
 						<td style="padding-left: 35px;">
 							<strong>IHYUNDAI DONASTORG</strong><br />
-							<a href="#">idonastorg@kandmelectrics1inc@aol.com</a>
+							<a href="#"> idonastorg@kandmelectrics1inc.com</a>
 						</td>
 					</tr>
 				</table>
@@ -154,28 +157,28 @@ $(document).ready(function() {
 <div class="FBG">
   <div class="FBG_resize">
 		<div class="left" style="width:161">
-			<h2>Quality Work</h2>
-			<p>Projects completion in a timely fashion <br>
-			Highest - Quality production <br>
-			Dependability & meet deadlines</p>
-		</div>
-		<div class="left">
-			<h2>Customer Satisfaction</h2>
-			<p>Knowledgeable & Attentive <br>
-			Fully Trained & Certified Technicians <br>
-			Offers solutions to your problem<br>
-			Integrity & Respect</p>
-		</div>
-		<div  class="left" style="width:271px">
-			<h2>Contact Us</h2>
-			<p>K & M ELECTRICS 1 INC <br>
-			Location: Orlando FL, 32818 <br>
-			Phone 407.468.2550 <br>
-			Fax 407 291-2569 <br>
-			Email: k_melectrics1@aol.com <br>
-			Website: www.kandmelectrics1inc.com<br>
-			License EC13006281</p>
-		</div>
+      <h2>Quality Work</h2>
+      <p style="width:200px">Projects completion in a timely fashion <br>
+      Highest - Quality production <br>
+      Dependability & meet deadlines</p>
+    </div>
+    <div class="left">
+      <h2>Customer Satisfaction</h2>
+      <p>Knowledgeable & Attentive <br>
+      Fully Trained & Certified Technicians <br>
+      Offers solutions to your problem<br>
+      Integrity & Respect</p>
+    </div>
+    <div  class="left" style="width:271px">
+      <h2>Contact Us</h2>
+      <p>K & M ELECTRICS 1 INC <br>
+      Location: Orlando FL, 32818 <br>
+      Phone 407.468.2550 <br>
+      Fax 407 291-2569 <br>
+      Email: k_melectrics1@aol.com <br>
+      Website: www.kandmelectrics1inc.com<br>
+      License # EC13012381</p>
+    </div>
 	<!--
     <div class="right">
       <h2>What They Say</h2>
@@ -200,7 +203,7 @@ $(document).ready(function() {
           Fax 407 291-2569 <br />
           Email: k_melectrics1@aol.com <br />
           Website: www.kandmelectrics1inc.com <br />
-          License EC13006281 </p>
+          License # EC13012381</p>
     <div class="clr"></div>
   </div>
   <div class="clr"></div>
