--- a/contactus.html
+++ b/contactus.html
@@ -135,23 +135,19 @@ $(document).ready(function() {
         <h2 style="padding-bottom:10px;">Contacts:</h2>
 
 							<p style="line-height:14px;"><strong>MIGUEL DONASTORG JR</strong><br />
-								<a style="line-height:14px;" href="#">mdonastorg@kandmelectrics1inc@aol.comc@aol.com</a>
+								<a style="line-height:14px;" href="#">mdonastorg@kandmelectrics1inc.com</a>
 							</p>
 
 							<br />
 
 							<p style="line-height:14px;"><strong>IHYUNDAI DONASTORG</strong><br />
-								<a style="line-height:14px;" href="#">idonastorg@kandmelectrics1inc@aol.com</a>
+								<a style="line-height:14px;" href="#"> idonastorg@kandmelectrics1inc.com</a>
 							</p>
 
 							<br />
 
-							<p style="line-height:14px;"><strong>MARITZIA DONASTORG</strong><br />
-								<a style="line-height:14px;" href="#">madonastorg@kandmelectrics1in</a>
-							</p>
+						
 
-
-							<br />
       </div>
         <div style="clear:both;"></div>
       <div class="clr"></div>
@@ -162,8 +158,8 @@ $(document).ready(function() {
 <div class="FBG">
   <div class="FBG_resize">
 		<div class="left" style="width:161">
-			<h2>Quality Work</h2>
-			<p>Projects completion in a timely fashion <br>
+				<h2>Quality Work</h2>
+			<p style="width:200px">Projects completion in a timely fashion <br>
 			Highest - Quality production <br>
 			Dependability & meet deadlines</p>
 		</div>
@@ -182,7 +178,7 @@ $(document).ready(function() {
 			Fax 407 291-2569 <br>
 			Email: k_melectrics1@aol.com <br>
 			Website: www.kandmelectrics1inc.com<br>
-			License EC13006281</p>
+			License # EC13012381</p>
 		</div>
 	<!--
     <div class="right">
@@ -208,7 +204,7 @@ $(document).ready(function() {
  					Fax 407 291-2569 <br />
  					Email: k_melectrics1@aol.com <br />
  					Website: www.kandmelectrics1inc.com <br />
- 					License EC13006281 </p>
+ 					License # EC13012381</p>
     <div class="clr"></div>
   </div>
   <div class="clr"></div>
