--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<div id="sliderFrame">
 			<div class="header_text"><a href="contactus.html"><img src="images/click.gif" alt="picture" width="186" height="32" border="0" /></a>
 				<h2>K & M Electrics 1, Inc.<br />
-				<span style="color:white;font-size:11px">INTEGRITY SAFTEY & THE HIGHEST QUALITY PRODUCTION</span></h2>
+				<span style="color:white;font-size:11px">INTEGRITY SAFETY & THE HIGHEST QUALITY PRODUCTION</span></h2>
 			<div class="clr"></div>
 		</div>
         <div id="slider">
@@ -80,14 +80,14 @@
 		<div class="FBG2">
 			<div class="FBG2_resize">
 				<div class="left">
-				  		<h2>Quality Work</h2>
-				  		<p>Projects completion in a timely fashion <br>
+				  	<h2>Quality Work</h2>
+				  		<p style="padding-right:4px;height:87px;width:192px">Projects completion in a timely fashion <br>
 							Highest - Quality production <br>
 							Dependability & meet deadlines</p>
 						</div>
-						<div class="left" style="width:163">
+						<div class="left" style="width:180px;padding-left:15px">
 				  		<h2>Customer Satisfaction</h2>
-				  		<p>Knowledgeable & Attentive <br>
+				  		<p style="width:180px">Knowledgeable & Attentive <br>
 							Fully Trained & Certified Technicians <br>
 							Offers solutions to your problem<br>
 							Integrity & Respect</p>
@@ -100,7 +100,7 @@
  							Fax 407 291-2569 <br>
  							Email: k_melectrics1@aol.com <br>
  							Website: www.kandmelectrics1inc.com<br>
- 							License EC13006281</p>
+ 							License # EC13012381</p>
 						</div>
 				<div class="clr"></div>
 			</div>
@@ -186,7 +186,7 @@
           Fax 407 291-2569 <br />
           Email: k_melectrics1@aol.com <br />
           Website: www.kandmelectrics1inc.com <br />
-          License EC13006281 </p>
+          License # EC13012381</p>
     <div class="clr"></div>
   </div>
   <div class="clr"></div>
