--- a/ourmission.html
+++ b/ourmission.html
@@ -152,7 +152,7 @@ $(document).ready(function() {
   <div class="FBG_resize">
 		<div class="left" style="width:161">
 			<h2>Quality Work</h2>
-			<p>Projects completion in a timely fashion <br>
+			<p style="width:200px">Projects completion in a timely fashion <br>
 			Highest - Quality production <br>
 			Dependability & meet deadlines</p>
 		</div>
@@ -171,7 +171,7 @@ $(document).ready(function() {
 			Fax 407 291-2569 <br>
 			Email: k_melectrics1@aol.com <br>
 			Website: www.kandmelectrics1inc.com<br>
-			License EC13006281</p>
+			License # EC13012381</p>
 		</div>
 	<!--
     <div class="right">
@@ -197,7 +197,7 @@ $(document).ready(function() {
           Fax 407 291-2569 <br />
           Email: k_melectrics1@aol.com <br />
           Website: www.kandmelectrics1inc.com <br />
-          License EC13006281 </p>
+          License # EC13012381</p>
     <div class="clr"></div>
   </div>
   <div class="clr"></div>
