--- a/ourservices.html
+++ b/ourservices.html
@@ -174,27 +174,27 @@ $(document).ready(function() {
 <div class="FBG">
   <div class="FBG_resize">
 		<div class="left" style="width:161">
-			<h2>Quality Work</h2>
-			<p>Projects completion in a timely fashion <br>
-			Highest - Quality production <br>
-			Dependability & meet deadlines</p>
-		</div>
-		<div class="left">
-			<h2>Customer Satisfaction</h2>
-			<p>Knowledgeable & Attentive <br>
-			Fully Trained & Certified Technicians <br>
-			Offers solutions to your problem<br>
-			Integrity & Respect</p>
-		</div>
-		<div  class="left" style="width:271px">
-			<h2>Contact Us</h2>
-			<p>K & M ELECTRICS 1 INC <br>
-			Location: Orlando FL, 32818 <br>
-			Phone 407.468.2550 <br>
-			Fax 407 291-2569 <br>
-			Email: k_melectrics1@aol.com <br>
-			Website: www.kandmelectrics1inc.com<br>
-			License EC13006281</p>
+		<h2 >Quality Work</h2>
+      <p style="width:200px">Projects completion in a timely fashion <br>
+      Highest - Quality production <br>
+      Dependability & meet deadlines</p>
+    </div>
+    <div class="left">
+      <h2>Customer Satisfaction</h2>
+      <p>Knowledgeable & Attentive <br>
+      Fully Trained & Certified Technicians <br>
+      Offers solutions to your problem<br>
+      Integrity & Respect</p>
+    </div>
+    <div  class="left" style="width:271px">
+      <h2>Contact Us</h2>
+      <p>K & M ELECTRICS 1 INC <br>
+      Location: Orlando FL, 32818 <br>
+      Phone 407.468.2550 <br>
+      Fax 407 291-2569 <br>
+      Email: k_melectrics1@aol.com <br>
+      Website: www.kandmelectrics1inc.com<br>
+      License # EC13012381</p>
 		</div>
 	<!--
     <div class="right">
@@ -220,7 +220,7 @@ $(document).ready(function() {
           Fax 407 291-2569 <br />
           Email: k_melectrics1@aol.com <br />
           Website: www.kandmelectrics1inc.com <br />
-          License EC13006281 </p>
+          License # EC13012381</p>
     <div class="clr"></div>
   </div>
   <div class="clr"></div>
