--- a/aboutus.html
+++ b/aboutus.html
@@ -104,10 +104,10 @@ $(document).ready(function() {
   <div class="body_resize">
     <div class="body">
       <div class="left">
-        <h2>INTEGRITY SAFETY & THE HIGHEST QUALITY PRODUCTION. JUST LIKE IT IS ON THE HOMEPAGE.</h2>
+        <h2>INTEGRITY SAFETY & THE HIGHEST QUALITY PRODUCTION.</h2>
     		<div class="rotator">
 		  		<ul>
-		    		<li><img src="images/underground electrical about page or services.jpeg" alt="pic4" width="350" height="220"/></li>
+		    		<li><img src="images/conduit for services or about us page.jpg" alt="pic4" width="350" height="220"/></li>
 		    		<li><img src="images/Powerful-lighting-symbol-on-white-background-Stock-Photo-lightning-bolt-red.jpg" alt="pic4" width="350" height="220"/></li>
 						<li><img src="images/third image home page.jpg" alt="pic4" width="350" height="220"/></li>
 		  		</ul>
@@ -131,7 +131,7 @@ $(document).ready(function() {
 							<a href="#">mdonastorg@kandmelectrics1inc.com</a>
 						</td>
 						<td style="padding-left: 35px;">
-						or
+					
 						</td>
 						<td style="padding-left: 35px;">
 							<strong>IHYUNDAI DONASTORG</strong><br />
